# effective_moden_cpp

./: CMakeLists.txt  Dockerfile  conditions.hh  docker-compose.yml  main.cc
chapter3/: CMakeLists.txt  chapter3.cc  chapter3.hh  chapter3_15.cc  chapter3_15.hh  chapter3_7.cc  chapter3_7.hh
chapter5/: CMakeLists.txt  chapter5.cc  chapter5.hh  chapter5.md  chapter5_26.cc  chapter5_26.hh  chapter5_27.cc  chapter5_27.hh
chapter6/: CMakeLists.txt  chapter6.cc  chapter6.hh  chapter6_31.cc  chapter6_31.hh  chapter6_32.cc  chapter6_32.hh  chapter6_33.cc  chapter6_33.hh  chapter6_34.cc  chapter6_34.hh
chapter7/: CMakeLists.txt  chapter7.cc  chapter7.hh  section35.cc  section35.hh  section36.cc  section36.hh  section37.cc  section37.hh  section38.cc  section38.hh  section39.cc  section39.hh  section40.cc  section40.hh
chapter8/: CMakeLists.txt  chapter8.cc  chapter8.hh  section40.cc  section40.hh  section41.cc  section41.hh  section42.cc  section42.hh
libs/: CMakeLists.txt  lib.cc  lib.h
